--- a/webgui/index.html
+++ b/webgui/index.html
@@ -18,6 +18,10 @@
       <input type="text" name="cmd" id="prompt" class="prompt">
     </div>
 
+    <div>
+      loadFile
+      <input type="file" id="fileInput"/>
+    </div>
   </div>
 
   <div class="bottompart">
