back on trackgit add webgui/freelinerWebGUI.js

--- a/webgui/webGui.html
+++ b/webgui/webGui.html
@@ -50,51 +50,21 @@
       <div class="widget" title="pick renderLayer">
         renderLayer <input type="number" id="renderLayer" min="0">
       </div> -->
-      <div class="widget" title="pick renderMode">
-        renderMode <select class="selecta" id="b_key"> </select>
-      </div>
-      <div class="widget" title="animationMode">
-        animationMode <select class="selecta" id="a_key"> </select>
-      </div>
-      <div class="widget" title="stroke color">
-        strokeColor <select class="selecta" id="q_key"> </select>
-      </div>
-      <div class="widget" title="fillcolor">
-        fillColor <select class="selecta" id="f_key"> </select>
-      </div>
-      <div class="widget" title="enterpolator">
-        enterpolator <select class="selecta" id="e_key"> </select>
-      </div>
-      <div class="widget" title="easing">
-        easing <select class="selecta" id="h_key"> </select>
-      </div>
-      <div class="widget" title="iterator">
-        iteration <select class="selecta" id="i_key"> </select>
-      </div>
-      <div class="widget" title="reverse">
-        reverseMode <select class="selecta" id="j_key"> </select>
-      </div>
-      <div class="widget" title="rotation">
-        rotation <select class="selecta" id="o_key"> </select>
-      </div>
-      <div class="widget" title="select layer for render">
-        layer <select class="selecta" id="p_key"> </select>
-      </div>
-      <div class="widget" title="polka">
-        polka <select class="selecta" id="r_key"> </select>
-      </div>
-      <div class="widget" title="to render or not">
-        enabler <select class="selecta" id="u_key"> </select>
-      </div>
-      <div class="widget" title="decides which segments get rendered">
-        segmentSelector <select class="selecta" id="v_key"> </select>
-      </div>
-      <div class="widget" title="size of shape">
-        size <input type="number" id="brushSize"> </input>
-      </div>
-      <div class="widget" title="weight of stroke">
-        strokeWeight <input type="number" id="strokeWeight"> </input>
-      </div>
+      <div class="widget" id='b_KEY'> </div>
+      <div class="widget" id='a_KEY'> </div>
+      <div class="widget" id='q_KEY'> </div>
+      <div class="widget" id='f_KEY'> </div>
+      <div class="widget" id='k_KEY'> </div>
+      <div class="widget" id='l_KEY'> </div>
+      <div class="widget" id='o_KEY'> </div>
+      <div class="widget" id='p_KEY'> </div>
+      <div class="widget" id='i_KEY'> </div>
+      <div class="widget" id='r_KEY'> </div>
+      <div class="widget" id='u_KEY'> </div>
+      <div class="widget" id='v_KEY'> </div>
+      <div class="widget" id='h_KEY'> </div>
+      <div class="widget" id='j_KEY'> </div>
+      <div class="widget" id='s_KEY'> </div>
     </div>
 
 
