for bun to test

--- a/webgui/webGui.html
+++ b/webgui/webGui.html
@@ -45,6 +45,7 @@
       <div class="widget" id='O_KEY'> </div>
       <div class="widget" id='S_KEY'> </div>
       <div class="widget" id='I_KEY'> </div>
+      <div class="widget" id='y_KEY'> </div>
     </div>
 
     <div class="rightpane" style="width:50%; float:right;">
