gui with input feedback

--- a/webgui/webGui.html
+++ b/webgui/webGui.html
@@ -49,6 +49,9 @@
     </div>
 
     <div class="rightpane" style="width:50%; float:right;">
+      <div class="widget" id='alphabetWidget' title="select template to edit">
+        <table id="templateSelector"> </table>
+      </div>
       <div class="widget" title="Select some template (A-Z) then pick a color!">
         stroke <input type="color" value="#ff0000" id="strokePicker">
         fill <input type="color" value="#ff0000" id="fillPicker">
