other inputs too

--- a/webgui/webGui.html
+++ b/webgui/webGui.html
@@ -69,6 +69,7 @@
       <div class="widget" id='l_KEY'> </div>
       <div class="widget" id='b_KEY'> </div>
       <div class="widget" id='a_KEY'> </div>
+      <div class="widget" id='e_KEY'> </div>
       <div class="widget" id='h_KEY'> </div>
       <div class="widget" id='i_KEY'> </div>
       <div class="widget" id='r_KEY'> </div>
