--- a/webgui/standardWebGUI.html
+++ b/webgui/standardWebGUI.html
@@ -14,19 +14,53 @@
     <div class="widget" id='alphabetWidget' title="select template to edit">
       <table id="templateSelector"> </table>
     </div>
+
     <div class="leftpane" style="width:50%; float:left;">
-      <div class="widget" title="set the uX floats of the shader">
+      <div class="widget" id='q_KEY'> &nbsp; </div>
+      <div class="widget" id='k_KEY'> &nbsp; </div>
+      <div class="widget" id='f_KEY'> &nbsp; </div>
+      <div class="widget" id='l_KEY'> &nbsp; </div>
+      <div class="widget" id='b_KEY'> &nbsp; </div>
+      <div class="widget" id='a_KEY'> &nbsp; </div>
+      <div class="widget" id='e_KEY'> &nbsp; </div>
+      <div class="widget" id='h_KEY'> &nbsp; </div>
+      <div class="widget" id='i_KEY'> &nbsp; </div>
+      <div class="widget" id='r_KEY'> &nbsp; </div>
+      <div class="widget" id='v_KEY'> &nbsp; </div>
+      <div class="widget" id='j_KEY'> &nbsp; </div>
+      <div class="widget" id='o_KEY'> &nbsp; </div>
+      <div class="widget" id='p_KEY'> &nbsp; </div>
+      <div class="widget" id='u_KEY'> &nbsp; </div>
+      <div class="widget" id='s_KEY'> &nbsp; </div>
+      <div class="widget" id='w_KEY'> &nbsp; </div>
+    </div>
+
+    <div class="rightpane" style="width:50%; float:right;">
+      <div class="widget" title="Select some template (A-Z) then pick a color!">
+        stroke <input type="color" value="#ff0000" id="strokePicker">
+        fill <input type="color" value="#ff0000" id="fillPicker">
+      </div>
+      <div class="widget" title="Pick a shader">
         Pick shader
         <input type="radio" name=shaderSelect id="shaderSelect0" title="pick shader 0">
         <input type="radio" name=shaderSelect id="shaderSelect1" title="pick shader 1">
         <input type="radio" name=shaderSelect id="shaderSelect2" title="pick shader 2">
         <input type="radio" name=shaderSelect id="shaderSelect3" title="pick shader 3"> <br>
+      </div>
+
+      <div class="widget">
         u0<input type="range" id="shaderFader0" min="0" max="100" /> <br>
+      </div>
+      <div class="widget">
         u1<input type="range" id="shaderFader1" min="0" max="100" /> <br>
+      </div>
+      <div class="widget">
         u2<input type="range" id="shaderFader2" min="0" max="100" /> <br>
+      </div>
+      <div class="widget">
         u3<input type="range" id="shaderFader3" min="0" max="100" /> <br>
       </div>
-      <div class="widget" id='C_KEY'> </div>
+      <!-- <div class="widget" id='C_KEY'> </div>
       <div class="widget" id='V_KEY'> </div>
       <div class="widget" id='B_KEY'> </div>
       <div class="widget" id='X_KEY'> </div>
@@ -35,42 +69,8 @@
       <div class="widget" id='O_KEY'> </div>
       <div class="widget" id='S_KEY'> </div>
       <div class="widget" id='I_KEY'> </div>
-      <div class="widget" id='y_KEY'> </div>
+      <div class="widget" id='y_KEY'> </div> -->
     </div>
-
-    <div class="rightpane" style="width:50%; float:right;">
-      <div class="widget" title="Select some template (A-Z) then pick a color!">
-        stroke <input type="color" value="#ff0000" id="strokePicker">
-        fill <input type="color" value="#ff0000" id="fillPicker">
-      </div>
-
-      <!-- <div class="widget" title="set the render mode">
-        renderMode <input type="number" id="renderMode" min="0">
-      </div>
-      <div class="widget" title="pick renderLayer">
-        renderLayer <input type="number" id="renderLayer" min="0">
-      </div> -->
-      <div class="widget" id='q_KEY'> </div>
-      <div class="widget" id='f_KEY'> </div>
-      <div class="widget" id='k_KEY'> </div>
-      <div class="widget" id='l_KEY'> </div>
-      <div class="widget" id='b_KEY'> </div>
-      <div class="widget" id='a_KEY'> </div>
-      <div class="widget" id='e_KEY'> </div>
-      <div class="widget" id='h_KEY'> </div>
-      <div class="widget" id='i_KEY'> </div>
-      <div class="widget" id='r_KEY'> </div>
-      <div class="widget" id='v_KEY'> </div>
-      <div class="widget" id='j_KEY'> </div>
-      <div class="widget" id='o_KEY'> </div>
-      <div class="widget" id='p_KEY'> </div>
-      <div class="widget" id='u_KEY'> </div>
-      <div class="widget" id='s_KEY'> </div>
-      <div class="widget" id='w_KEY'> </div>
-
-
-    </div>
-
 
   </div>
   <!-- javascripts -->
