--- a/webgui/standardWebGUI.html
+++ b/webgui/standardWebGUI.html
@@ -15,30 +15,36 @@
       <table id="templateSelector"> </table>
     </div>
 
-    <div class="leftpane" style="width:50%; float:left;">
-      <div class="widget" id='q_KEY'> &nbsp; </div>
-      <div class="widget" id='k_KEY'> &nbsp; </div>
-      <div class="widget" id='f_KEY'> &nbsp; </div>
-      <div class="widget" id='l_KEY'> &nbsp; </div>
-      <div class="widget" id='b_KEY'> &nbsp; </div>
-      <div class="widget" id='a_KEY'> &nbsp; </div>
-      <div class="widget" id='e_KEY'> &nbsp; </div>
-      <div class="widget" id='h_KEY'> &nbsp; </div>
-      <div class="widget" id='i_KEY'> &nbsp; </div>
-      <div class="widget" id='r_KEY'> &nbsp; </div>
-      <div class="widget" id='v_KEY'> &nbsp; </div>
-      <div class="widget" id='j_KEY'> &nbsp; </div>
-      <div class="widget" id='o_KEY'> &nbsp; </div>
-      <div class="widget" id='p_KEY'> &nbsp; </div>
-      <div class="widget" id='u_KEY'> &nbsp; </div>
-      <div class="widget" id='s_KEY'> &nbsp; </div>
-      <div class="widget" id='w_KEY'> &nbsp; </div>
+    <div style="width:60%; float:left;">
+      <div style="width:50%; float:left;">
+        <div class="widget" id='b_KEY'>  </div>
+        <div class="widget" id='e_KEY'>  </div>
+        <div class="widget" id='i_KEY'>  </div>
+        <div class="widget" id='j_KEY'>  </div>
+        <div class="widget" id='o_KEY'>  </div>
+        <div class="widget" id='p_KEY'>  </div>
+        <div class="widget" id='q_KEY'>  </div>
+        <div class="widget" id='f_KEY'>  </div>
+        <div class="widget" id='u_KEY'>  </div>
+      </div>
+      <div style="width:50%; float:right;">
+        <div class="widget" id='a_KEY'>  </div>
+        <div class="widget" id='v_KEY'>  </div>
+        <div class="widget" id='r_KEY'>  </div>
+        <div class="widget" id='h_KEY'>  </div>
+        <div class="widget" id='s_KEY'>  </div>
+        <div class="widget" id='w_KEY'>  </div>
+        <div class="widget" id='k_KEY'>  </div>
+        <div class="widget" id='l_KEY'>  </div>
+      </div>
     </div>
 
-    <div class="rightpane" style="width:50%; float:right;">
+
+    <div class="rightpane" style="width:40%; float:right;">
       <div class="widget" title="Select some template (A-Z) then pick a color!">
-        stroke <input type="color" value="#ff0000" id="strokePicker">
-        fill <input type="color" value="#ff0000" id="fillPicker">
+        custom color <input type="color" value="#ff0000" id="strokePicker">
+        <button id="customStroke">stroke</button>
+        <button id="customStroke">fill</button>
       </div>
       <div class="widget" title="Pick a shader">
         Pick shader
@@ -49,16 +55,16 @@
       </div>
 
       <div class="widget">
-        u0<input type="range" id="shaderFader0" min="0" max="100" /> <br>
+        u0<input type="range" class="shaderSlider" id="shaderFader0" min="0" max="100" /> <br>
       </div>
       <div class="widget">
-        u1<input type="range" id="shaderFader1" min="0" max="100" /> <br>
+        u1<input type="range" class="shaderSlider" id="shaderFader1" min="0" max="100" /> <br>
       </div>
       <div class="widget">
-        u2<input type="range" id="shaderFader2" min="0" max="100" /> <br>
+        u2<input type="range" class="shaderSlider" id="shaderFader2" min="0" max="100" /> <br>
       </div>
       <div class="widget">
-        u3<input type="range" id="shaderFader3" min="0" max="100" /> <br>
+        u3<input type="range" class="shaderSlider" id="shaderFader3" min="0" max="100" /> <br>
       </div>
       <!-- <div class="widget" id='C_KEY'> </div>
       <div class="widget" id='V_KEY'> </div>
