to test, package it

--- a/freeliner_sketch/data/standardWebGUI.html
+++ b/freeliner_sketch/data/standardWebGUI.html
@@ -41,7 +41,7 @@
 
     <div class="rightpane" style="width:40%; float:right;">
       <div class="widget" title="Select some template (A-Z) then pick a color!">
-        custom color <input type="color" value="#ff0000" id="strokePicker">
+        custom color &nbsp; <input type="color" value="#ff0000" id="strokePicker">
         <button id="customStroke">stroke</button>
         <button id="customStroke">fill</button>
       </div>
