--- a/freeliner_sketch/data/webgui/standardWebGUI.html
+++ b/freeliner_sketch/data/webgui/standardWebGUI.html
@@ -69,6 +69,9 @@
       <div class="widget">
         <button id="configureDisplay">configureDisplay</div>
       </div>
+      <div class="widget" title="open reference image">
+        <button id="openRef">open reference</button>
+      </div>
 
       <!-- <div class="widget" id='C_KEY'> </div>
       <div class="widget" id='V_KEY'> </div>
