added cmd promt

--- a/freeliner_sketch/data/webgui/standardWebGUI.html
+++ b/freeliner_sketch/data/webgui/standardWebGUI.html
@@ -14,7 +14,10 @@
     <div class="widget" id='alphabetWidget' title="select template to edit">
       <table id="templateSelector"> </table>
     </div>
-
+    <div class="widget" title="type a freeliner command and press enter">
+      cmd:
+      <input type="text" name="cmd" id="prompt">
+    </div>
     <div style="width:60%; float:left;">
       <div style="width:50%; float:left;">
         <div class="widget" id='b_KEY'>  </div>
