fixed layer down bug

--- a/freeliner_sketch/data/webgui/standardWebGUI.html
+++ b/freeliner_sketch/data/webgui/standardWebGUI.html
@@ -14,7 +14,7 @@
     <div class="widget" id='alphabetWidget' title="select template to edit">
       <table id="templateSelector"> </table>
     </div>
-    <div class="widget" title="type a freeliner command and press enter">
+    <div class="widget" title="type a freeliner command and press enter, use up down arrows supported">
       cmd:
       <input type="text" name="cmd" id="prompt">
     </div>
