--- a/freeliner_sketch/data/webgui/standardWebGUI.html
+++ b/freeliner_sketch/data/webgui/standardWebGUI.html
@@ -67,6 +67,7 @@
           <option value="maskLayer">maskLayer</option>
           <option value="imageLayer">imageLayer</option>
           <option value="mergeOutput">mergeOutput</option>
+          <option value="outputLayer">guiLayer</option>
           <option value="outputLayer">outputLayer</option>
         </select>
         <button id="makeLayerButton">makeLayer</button>
