--- a/freeliner_sketch/data/webgui/standardWebGUI.html
+++ b/freeliner_sketch/data/webgui/standardWebGUI.html
@@ -70,7 +70,9 @@
           <option value="outputLayer">guiLayer</option>
           <option value="outputLayer">outputLayer</option>
         </select>
-        <button id="makeLayerButton">makeLayer</button>
+        <button id="makeLayerButton">make</button>
+        <button id="layerUpButton" title="push selected layer up">^</button>
+        <button id="layerDownButton" title="push selected layer up">v</button>
       </div>
       <div id="layerStack" title="layerStack">
         <div class="widget">
