pre aziz loves you two party

--- a/freeliner_sketch/data/webgui/standardWebGUI.html
+++ b/freeliner_sketch/data/webgui/standardWebGUI.html
@@ -55,6 +55,7 @@
         <button id="configureDisplay">configureDisplay</button>
         <button id="openRef">open reference</button>
         <button id="refreshfiles">refresh files</button>
+        <input type="color" value="#ff0000" id="interfaceColor" title="set the background color of this page!">
       </div>
       <div class="widget">
         name:
@@ -69,6 +70,8 @@
           <option value="mergeOutput">mergeOutput</option>
           <option value="outputLayer">guiLayer</option>
           <option value="outputLayer">outputLayer</option>
+          <option value="fixtureLayer">fixtureLayer</option>
+
         </select>
         <button id="makeLayerButton">make</button>
         <button id="layerUpButton" title="push selected layer up">^</button>
