video capture layer implemented

--- a/freeliner_sketch/data/webgui/standardWebGUI.html
+++ b/freeliner_sketch/data/webgui/standardWebGUI.html
@@ -71,6 +71,7 @@
           <option value="outputLayer">guiLayer</option>
           <option value="outputLayer">outputLayer</option>
           <option value="fixtureLayer">fixtureLayer</option>
+          <option value="captureLayer">captureLayer</option>
 
         </select>
         <button id="makeLayerButton">make</button>
