fixed custom fill/stroke on webgui

--- a/freeliner_sketch/data/webgui/standardWebGUI.html
+++ b/freeliner_sketch/data/webgui/standardWebGUI.html
@@ -31,9 +31,8 @@
         <div class="widget" id='f_KEY'>  </div>
         <div class="widget" id='u_KEY'>  </div>
         <div class="widget" title="Select some template (A-Z) then pick a color!">
-          custom color &nbsp; <input type="color" value="#ff0000" id="strokePicker">
-          <button id="customStroke">stroke</button>
-          <button id="customStroke">fill</button>
+          stroke &nbsp; <input type="color" value="#ff0000" id="strokePicker">
+          fill &nbsp; <input type="color" value="#ff0000" id="fillPicker">
         </div>
       </div>
       <div style="width:50%; float:right;">
