frame saving layer implemented, closes #21

--- a/freeliner_sketch/data/webgui/standardWebGUI.html
+++ b/freeliner_sketch/data/webgui/standardWebGUI.html
@@ -71,6 +71,8 @@
           <option value="outputLayer">outputLayer</option>
           <option value="fixtureLayer">fixtureLayer</option>
           <option value="captureLayer">captureLayer</option>
+          <option value="screenshotLayer">screenshotLayer</option>
+
 
         </select>
         <button id="makeLayerButton">make</button>
