escape keys in layer name input and cmd logline

--- a/freeliner_sketch/data/webgui/standardWebGUI.html
+++ b/freeliner_sketch/data/webgui/standardWebGUI.html
@@ -101,6 +101,8 @@
 
 
   </div>
+
+  <div class="footer"> <p id="logline">of course!</p> </div>
   <!-- javascripts -->
   <script language="javascript" type="text/javascript" src="freelinerWebGUI.js"></script>
 
