added shader sliders to webgui!

--- a/freeliner_sketch/data/webgui/standardWebGUI.html
+++ b/freeliner_sketch/data/webgui/standardWebGUI.html
@@ -47,6 +47,22 @@
         <div class="widget" id='y_KEY'>  </div>
         <div class="widget" id='x_KEY'>  </div>
       </div>
+      <div class="widget" style=" height:100%; float:bottom; display:inline-block;">
+          Shaders
+          <div >
+              <input type="range" id="slider0" min="0" max="255">
+              <input type="range" id="slider1" min="0" max="255">
+              <input type="range" id="slider2" min="0" max="255">
+              <input type="range" id="slider3" min="0" max="255">
+          </div>
+          <div >
+              <input type="range" id="slider4" min="0" max="255">
+              <input type="range" id="slider5" min="0" max="255">
+              <input type="range" id="slider6" min="0" max="255">
+              <input type="range" id="slider7" min="0" max="255">
+          </div>
+      </div>
+
     </div>
 
     <div class="rightpane" style="width:40%; float:right;">
@@ -72,7 +88,6 @@
           <option value="fixtureLayer">fixtureLayer</option>
           <option value="captureLayer">captureLayer</option>
           <option value="screenshotLayer">screenshotLayer</option>
-
 
         </select>
         <button id="makeLayerButton">make</button>
