--- a/freeliner_sketch/data/webgui/standardWebGUI.html
+++ b/freeliner_sketch/data/webgui/standardWebGUI.html
@@ -76,19 +76,7 @@
         name:
         <input type="text" name="layerName" id="layerNameInput">
         <select id="layerTypeSelect">
-          <option value="renderLayer">renderLayer</option>
-          <option value="tracerLayer">tracerLayer</option>
-          <option value="mergeLayer">mergeLayer</option>
-          <option value="shaderLayer">shaderLayer</option>
-          <option value="maskLayer">maskLayer</option>
-          <option value="imageLayer">imageLayer</option>
-          <option value="mergeOutput">mergeOutput</option>
-          <option value="outputLayer">guiLayer</option>
-          <option value="outputLayer">outputLayer</option>
-          <option value="fixtureLayer">fixtureLayer</option>
-          <option value="captureLayer">captureLayer</option>
-          <option value="screenshotLayer">screenshotLayer</option>
-
+            <!-- layers go in here -->
         </select>
         <button id="makeLayerButton">make</button>
         <button id="layerUpButton" title="push selected layer up">^</button>
