--- a/freeliner_sketch/data/webgui/standardWebGUI.html
+++ b/freeliner_sketch/data/webgui/standardWebGUI.html
@@ -34,6 +34,7 @@
           stroke &nbsp; <input type="color" value="#ff0000" id="strokePicker">
           fill &nbsp; <input type="color" value="#ff0000" id="fillPicker">
         </div>
+
       </div>
       <div style="width:50%; float:right;">
         <div class="widget" id='a_KEY'>  </div>
@@ -47,7 +48,7 @@
         <div class="widget" id='y_KEY'>  </div>
         <div class="widget" id='x_KEY'>  </div>
       </div>
-      <div class="widget" style=" height:100%; float:bottom; display:inline-block;">
+      <div class="widget" title="select shaderLayer and then adjust" style=" height:100%; float:bottom; display:inline-block;">
           Shaders
           <div >
               <input type="range" id="slider0" min="0" max="255">
@@ -61,6 +62,20 @@
               <input type="range" id="slider6" min="0" max="255">
               <input type="range" id="slider7" min="0" max="255">
           </div>
+      </div>
+      <div class="widget" title="userPallet colors" style=" height:100%; float:bottom; display:inline-block;">
+         <input type="color" value="#ff0000" id="colorPicker0">
+         <input type="color" value="#ff0000" id="colorPicker1">
+         <input type="color" value="#ff0000" id="colorPicker2">
+         <input type="color" value="#ff0000" id="colorPicker3">
+         <input type="color" value="#ff0000" id="colorPicker4">
+         <input type="color" value="#ff0000" id="colorPicker5">
+         <input type="color" value="#ff0000" id="colorPicker6">
+         <input type="color" value="#ff0000" id="colorPicker7">
+         <input type="color" value="#ff0000" id="colorPicker8">
+         <input type="color" value="#ff0000" id="colorPicker9">
+         <input type="color" value="#ff0000" id="colorPicker10">
+         <input type="color" value="#ff0000" id="colorPicker11">
       </div>
 
     </div>
