mapped output seems to work well

--- a/freeliner_sketch/data/webgui/standardWebGUI.html
+++ b/freeliner_sketch/data/webgui/standardWebGUI.html
@@ -104,6 +104,7 @@
             <option value="fixtureLayer">fixtureLayer</option>
             <option value="captureLayer">captureLayer</option>
             <option value="screenshotLayer">screenshotLayer</option>
+            <option value="dualInputShader">dualInputShader</option>
         </select>
         <button id="makeLayerButton">make</button>
         <button id="layerUpButton" title="push selected layer up">^</button>
