--- a/freeliner_sketch/data/webgui/standardWebGUI.html
+++ b/freeliner_sketch/data/webgui/standardWebGUI.html
@@ -100,6 +100,7 @@
             <option value="imageLayer">imageLayer</option>
             <option value="mergeOutput">mergeOutput</option>
             <option value="outputLayer">guiLayer</option>
+            <option value="outputLayer">mappedOutputLayer</option>
             <option value="outputLayer">outputLayer</option>
             <option value="fixtureLayer">fixtureLayer</option>
             <option value="captureLayer">captureLayer</option>
